--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ p {
 }
 
 /* SEO / ORM / SMM body combined
-search engine optimiation / online reputation management / social media marketing */
+search engine optimization / online reputation management / social media marketing */
 .content-hero {
     margin-bottom: 20px;
     padding: 50px;
@@ -114,7 +114,7 @@ search engine optimiation / online reputation management / social media marketin
     background-color: #0072bb;
     color: #ffffff;
 }
-/* image consolidation */
+/* img element consolidation by adding class content-hero */
 .content-hero img {
     max-height: 200px;
 }
