--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,24 +7,24 @@
 body {
     background-color: #d9dcd6;
 }
-
-.header {
+/* ".header" changed to "header" along with corresponding styles after replacing some semantic elements in the HTML */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -85,8 +85,8 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
-/* consolidated benefit-lead/brand/cost */
+/*changed div class to benefit-style to minimalize lines and avoiding DRY.
+consolidated benefit-lead/brand/cost */
 .benefit-style {
     margin-bottom: 32px;
     color: #ffffff;
@@ -97,7 +97,7 @@ p {
     margin-bottom: 10px;
     text-align: center;
 }
- /* consolidated benefit image */ 
+ /* consolidated combining class benefity-style and element img */ 
 .benefit-style img {
     display: block;
     margin: 10px auto;
