section and article elements added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
+/* div element changed to nav */
 header nav {
     padding-top: 15px;
     margin-right: 20px;
